# cli

./: .editorconfig  .gitattributes  .gitignore  .pre-commit.yml  README.md  setup.cfg  tokei.toml
.github/workflows/: python-publish.yml
docs/: README.md
src/pincercli/: __main__.py  basic.py  py.typed
