[metadata]
name = pincer-cli
version = 0.0.0
description = A command line interface to bring automation to your pincer projects.
author = Pincer-org
author_email = contact@pincer.dev
license = MIT
platform = unix, linux, osx, cygwin, windows
url = https://pincer.dev
classifiers =
    Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pincer-cli
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
pincer-cli = py.typed

[flake8]
max-line-length = 88
